live apps fixed nowrap test8

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -272,9 +272,9 @@ figure {
   a,
   > img {
     @include breakpoint($small) {
-      width: calc(32% - 0.5em);
+      width: calc(32.5% - 0.5em);
     }
-    border: 0.5em solid transparent;
+    border: 0.3em solid transparent;
   }
 }
 
